--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
-    "sass": "^1.69.7"
+    "nuxt-swiper": "^1.2.2",
+    "sass": "^1.69.7",
+    "swiper": "^11.0.5"
   }
 }
