--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.10.3",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.1",
+    "nuxt-aos": "^1.2.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.5",
