--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
+    "gsap": "^3.12.4",
     "nuxt-swiper": "^1.2.2",
     "sass": "^1.69.7",
     "swiper": "^11.0.5"
